<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="item_league_logo" type="id"/>
    <item name="item_league_name" type="id"/>
    <item name="item_league_card" type="id"/>
    <item name="rv_list_league" type="id"/>detail_league_logo
    <item name="iv_league_detail_poster" type="id"/>
    <item name="tv_league_detail_description" type="id"/>
    <item name="tabs" type="id"/>
    <item name="constraintLayout" type="id"/>
    <item name="section_label" type="id"/>
    <item name="view_pager" type="id"/>
    <item name="rv_list_events" type="id"/>
    <item name="item_event_date" type="id"/>
    <item name="item_event_time" type="id"/>
    <item name="event_divider" type="id"/>
    <item name="item_score_home" type="id"/>
    <item name="item_score_away" type="id"/>
    <item name="item_event_name_home" type="id"/>
    <item name="item_event_name_away" type="id"/>
    <item name="item_event_card" type="id"/>
    <item name="event_detail_home_logo" type="id"/>
    <item name="event_detail_away_logo" type="id"/>
    <item name="event_detail_home_name" type="id"/>
    <item name="event_detail_away_name" type="id"/>
    <item name="event_detail_divider" type="id"/>
    <item name="event_detail_home_score" type="id"/>
    <item name="event_detail_away_score" type="id"/>
    <item name="tv_event_detail_defenses_away" type="id"/>
    <item name="tv_event_detail_defenses_home" type="id"/>
    <item name="tv_event_detail_defenses_label" type="id"/>
    <item name="tv_event_detail_formation_away" type="id"/>
    <item name="tv_event_detail_formation_home" type="id"/>
    <item name="tv_event_detail_formation_label" type="id"/>
    <item name="tv_event_detail_forwards_away" type="id"/>
    <item name="tv_event_detail_forwards_home" type="id"/>
    <item name="tv_event_detail_forwards_label" type="id"/>
    <item name="tv_event_detail_goals_away" type="id"/>
    <item name="tv_event_detail_goals_home" type="id"/>
    <item name="tv_event_detail_goals_label" type="id"/>
    <item name="tv_event_detail_keeper_away" type="id"/>
    <item name="tv_event_detail_keeper_home" type="id"/>
    <item name="tv_event_detail_keeper_label" type="id"/>
    <item name="tv_event_detail_mid_away" type="id"/>
    <item name="tv_event_detail_mid_home" type="id"/>
    <item name="tv_event_detail_mid_label" type="id"/>
    <item name="tv_event_detail_red_away" type="id"/>
    <item name="tv_event_detail_red_home" type="id"/>
    <item name="tv_event_detail_red_label" type="id"/>
    <item name="tv_event_detail_subst_away" type="id"/>
    <item name="tv_event_detail_subst_home" type="id"/>
    <item name="tv_event_detail_subst_label" type="id"/>
    <item name="tv_event_detail_yellow_away" type="id"/>
    <item name="tv_event_detail_yellow_home" type="id"/>
    <item name="tv_event_detail_yellow_label" type="id"/>
    <item name="card_event_detail_defenses" type="id"/>
    <item name="card_event_detail_formation" type="id"/>
    <item name="card_event_detail_forwards" type="id"/>
    <item name="card_event_detail_goals" type="id"/>
    <item name="card_event_detail_keeper" type="id"/>
    <item name="card_event_detail_mid" type="id"/>
    <item name="card_event_detail_red" type="id"/>
    <item name="card_event_detail_subst" type="id"/>
    <item name="card_event_detail_yellow" type="id"/>
    <item name="tv_event_detail_date" type="id"/>
    <item name="tv_event_detail_time" type="id"/>
    <item name="rv_list_search_events" type="id"/>
    <item name="rv_list_favorite_events" type="id"/>
    <item name="rv_list_teams" type="id" />
    <item name="item_team_card" type="id" />
    <item name="item_team_logo" type="id" />
    <item name="item_team_name" type="id" />
    <item name="rv_list_classement" type="id" />
    <item name="btn_league_detail_classement" type="id" />
    <item name="iv_classement_logo" type="id" />
    <item name="tv_classement_team" type="id" />
    <item name="tv_classement_win" type="id" />
    <item name="tv_classement_draw" type="id" />
    <item name="tv_classement_loss" type="id" />
    <item name="tv_classement_total" type="id" />
    <item name="iv_classement_item_logo" type="id" />
    <item name="tv_classement_item_team" type="id" />
    <item name="tv_classement_item_win" type="id" />
    <item name="tv_classement_item_draw" type="id" />
    <item name="tv_classement_item_loss" type="id" />
    <item name="tv_classement_item_total" type="id" />
    <item name="iv_team_detail_poster" type="id" />
    <item name="tv_team_detail_description" type="id" />
    <item name="team_tabs" type="id" />
    <item name="team_view_pager" type="id" />
    <item name="iv_team_detail_jersey" type="id" />
    <item name="tv_team_detail_league" type="id" />
    <item name="tv_team_detail_nickname" type="id" />
    <item name="tv_team_detail_established" type="id" />
    <item name="tv_team_detail_stadium_name" type="id" />
    <item name="iv_team_detail_stadium_snap" type="id" />
    <item name="tv_team_detail_stadium_location" type="id" />
    <item name="tv_team_detail_stadium_desc" type="id" />
    <item name="rv_list_search_teams" type="id" />
    <item name="favorite_tabs" type="id" />
    <item name="favorite_view_pager" type="id" />




</resources>